Fix vertical alignment on auth

--- a/src/css/mono.less
+++ b/src/css/mono.less
@@ -14,7 +14,7 @@ body {
 		margin-right: auto;
 		max-width: 1024px;
 		position: relative;
-		min-height: 100%;
+		height: 100%;
 
 		@media screen and (max-width: 1024px) {
 			margin-left: 16px;
